@@ -1,6 +1,11 @@
 /***********************************************************************
  X3 ChangeLog
 
+2006-08-08  Neil Spierling  <sirvulcan@gmail.com>
+
+	* src/chanserv.c: Fixed a crash with giveownership. X3 would crash
+	if a giveownership command was issued in a channel with no owners.
+
 2006-08-07  Neil Spierling  <sirvulcan@gmail.com>
 
 	* configure: Regenerated.
